2006-08-23 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlTextArea.cs: encode the value in 1.x too. Patch by Dean Brettle.

2006-08-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HtmlTable.cs:
	* HtmlTableRow.cs: fixed ParseChildren attribute to be compliant
	to .net

2006-07-12 Andrew Skiba <andrews@mainsoft.com>

	* HtmlInputControl.cs: remove obsolete #if NET_2_0

2006-06-06 Juraj Skripsky <js@hotfeet.ch>

	* HtmlForm.cs (RenderAttributes): Sync with changes to HttpRequest.
	Fixes bug #78591.

2006-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlTextArea.cs: Value is HtmlEncoded/Decoded in 2.0. Fixes
	bug #78074.

2006-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlInputRadioButton.cs: Value returns the ID only when there's no
	"value" set. Fixes bug #78101.

2006-03-19  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HtmlAnchor.cs: fixed RenderAttributes, if target attribute is empty 
	it shouldn't be rendered
	* HtmlForm.cs: fixed Method, default method "post" should be added if 
	its value null or empty string
	* HtmlInputImage.cs: fixed SetAtt, it removes attributes if it has null 
	value, the fix is to remove attributes with empty string value too

2006-02-23  Chris Toshok  <toshok@ximian.com>

	* HtmlButton.cs: fix corcompare output.

	* HtmlInputButton.cs: same.

	* HtmlInputImage.cs: same.

	* HtmlInputReset.cs: same.

2006-01-22  Chris Toshok  <toshok@ximian.com>

	* HtmlInputButton.cs:
	s/GetPostBackClientEvent/GetPostBackEventReference.

2005-12-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlTableRow.cs: Cells is virtual in latest 1.1.

2005-11-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlTableRow.cs: fixed the same problem in bug #76815 but this time
	for cells.
	* HtmlTable.cs: moved WriteLine around.

2005-11-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlForm.cs: more class-status fixes.

2005-11-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>
